# Block7/7.3/swagger-output.json
@@ -294,6 +294,19 @@
           }
         }
       }
+    },
+    "/verify": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "406": {
+            "description": "Not Acceptable"
+          }
+        }
+      }
     }
   }
 }
